I have totally Shifted All the css with tailswind css & replaced all the separate components within wrapper component  with Dashboard component (conatins all details ) for better with and responsiveness also i have added new css logics

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
+<!-- Header -->
 <app-header></app-header>
-<main class="px-3">
-    <router-outlet></router-outlet>
+
+<!-- Main Content with footer -->
+<main class="flex flex-col min-h-[calc(100vh-56px-1px)]">
+    <div class="flex-1">  
+        <router-outlet></router-outlet>
+    </div>
+    <app-footer></app-footer>
 </main>
