--- a/src/app/project/E-Management/e-managemnet.component.html
+++ b/src/app/project/E-Management/e-managemnet.component.html
@@ -1,58 +1,65 @@
-<section id="model" class="md:w-10/12 mx-auto md:my-16 my-10 bg-color  md:p-10 p-4" >
+<section class="bg-zinc-50">
 
-    <h1 class="title"><span class='highlight'>E</span> Management</h1>
-    <hr style="border: 1px solid #b4df06;">
-    <p class="otherTexts mt-10">
-        The E Management is a web application designed for efficient employee data management. Leveraging technologies
-        like
-        Bootstrap and Angular for <span class="highlight">front-end</span>, design and mongoDB Express.js, and Node.js
-        for <span class="highlight">back-end</span> functionality, this project
-        offers
-        a user-friendly and robust solution.
-    </p>
+    <MaxWidthWrapper className="pt-20 md:pt-28 pb-24 lg:pb-32">
 
+        <h1 class="text-4xl md:text-6xl font-bold font-heading leading-tight text-center"><span
+                class='text-green-500'>E</span> Management</h1>
 
-    <section class="mt-4">
-        <p class="headings">Key Features</p>
-        <p class="my-4" *ngFor="let features of keyFeatures">
-            <span class="inline_headings">{{features.Name}} :- </span>
-            <span class="otherTexts">{{features.featureDescription}}</span>
+        <div class="w-full h-px bg-green-500 mt-3"></div>
+
+        <p class="mt-10">
+            E Management is a web application designed for efficient employee data management. Leveraging technologies
+            like
+            Bootstrap and Angular for the <span class="text-green-500 font-semibold">front-end</span> design and
+            MongoDB, Express.js, and
+            Node.js
+            for the <span class="text-green-500 font-semibold">back-end</span> functionality, this project offers a
+            user-friendly and
+            robust
+            solution.
         </p>
-    </section>
 
 
-    <section class="mt-4">
-        <p class="headings">Challenges Faced</p>
-        <p class="otherTexts mt-4">
-            One notable challenge encountered during the development process was
-            implementing the forget password
-            feature,
-            specifically in creating a seamless multi-step process. The challenge was <span
-                class="highlight">addressed</span> by designing a
-            <span class="highlight">step-by-step</span>
-            approach using an enum field. Each step, such as email validation, OTP submission, and new password setup,
-            was
-            managed by conditionally rendering views through the ngIF directive. This innovative solution allowed for a
-            structured and user-friendly experience, overcoming the initial hurdles in the process.
-        </p>
-    </section>
+        <section class="mt-4">
+            <p class="font-heading font-semibold text-2xl">Key Features</p>
+            <p class="my-4" *ngFor="let features of keyFeatures">
+                <span class="font-semibold">{{features.Name}} :- </span>
+                <span>{{features.featureDescription}}</span>
+            </p>
+        </section>
 
 
-    <section class="mt-4">
-        <p class="headings">Technology Used.</p>
-        <ul class="list-disc otherTexts">
-            <li class="my-4 ml-4" *ngFor="let Technologies of technologies">{{Technologies}}</li>
-        </ul>
-    </section>
+        <section class="mt-4">
+            <p class="font-heading font-semibold text-2xl">Challenges Faced</p>
+            <p class="mt-4">
+                One notable challenge encountered during the development process was implementing the forgot password
+                feature,
+                specifically in creating a seamless multi-step process. This challenge was <span
+                    class="text-green-500 font-semibold">addressed</span> by designing a
+                <span class="text-green-500 font-semibold">step-by-step</span> approach using an enum field. Each step,
+                such as email
+                validation, OTP submission, and new password setup,
+                was managed by conditionally rendering views through the ngIf directive. This innovative solution
+                allowed
+                for a
+                structured and user-friendly experience, overcoming the initial hurdles in the process.
+            </p>
+        </section>
 
-    <hr style="border: 1px solid #b4df06;">
 
-    <section class="mt-4">
-        <p class="headings">References</p>
-        <ul>
-            <li id="references" class="text-blue-700" *ngFor="let References of references"><a target="main"
-                    href="{{References}}">{{References}}</a></li>
-        </ul>
-    </section>
+        <section class="mt-4">
+            <p class="font-heading font-semibold text-2xl">Technology Used.</p>
+            <ul class="list-disc">
+                <li class="my-4 ml-4" *ngFor="let Technologies of technologies">{{Technologies}}</li>
+            </ul>
+        </section>
 
+        <section class="mt-4">
+            <p class="font-heading font-semibold text-2xl">References</p>
+            <ul>
+                <li class="text-blue-500 hover:text-blue-700 transition-all" *ngFor="let References of references"><a
+                        target="main" href="{{References}}">{{References}}</a></li>
+            </ul>
+        </section>
+    </MaxWidthWrapper>
 </section>
