--- a/src/app/project/project.component.css
+++ b/src/app/project/project.component.css
@@ -1,64 +1,15 @@
-.AcedemicProject {
-    font-family: var(--font);
-    font-weight: var(--font-weight);
-    font-size: var(--heading);
-}
-
-
-.AcedemicProject::after {
-    content: "";
-    display: inline-block;
-    width: 15%;
-    height: 1px;
-    margin-left: 10px;
-    background-color: #b4df06;
-}
-
-
-.AcedemicProject::before {
-    content: "";
-    display: inline-block;
-    width: 15%;
-    height: 1px;
-    margin-right: 10px;
-    background-color: #b4df06;
-}
-
-
-nav ul li {
-    padding: 10px 20px;
-    font-family: var(--font);
-    font-weight: 600;
-    font-size: clamp(13px, 2vw, 17px);
-}
-
-nav ul li:nth-child(2) {
-    margin-left: 10px;
-}
-
-
-nav ul {
-    background-color: rgb(235, 235, 235);
-}
-
-.onclickActive {
-    background-color: lightgreen;
-}
-
-
-
 
 .card {
     width: 190px;
     height: 254px;
     border-radius: 20px;
-    background: black;
+    background: rgb(250, 250, 250);
     position: relative;
-    padding: 1.8rem;
-    border: 2px solid var(--highlight);
+    padding: 10px;
+    border: 2px solid rgba(128, 128, 128, 0.269);
     transition: 0.5s ease-out;
     overflow: visible;
-    box-shadow: 0 0 20px 1px #b4bd3724;
+    box-shadow: 0 0 20px 1px #00000024;
 }
 
 .card-details {
@@ -74,8 +25,8 @@ nav ul {
     width: 60%;
     border-radius: 1rem;
     border: none;
-    background-color: #21f3a4;
-    color: black;
+    background-color: #22c55e;
+    color: white;
     font-size: 1rem;
     padding: .5rem 1rem;
     position: absolute;
@@ -85,52 +36,13 @@ nav ul {
     transition: 0.3s ease-out;
 }
 
-.text-body {
-    color: rgb(134, 134, 134);
-}
-
-/*Text*/
-.text-title {
-    font-size: clamp(16px, 2vw, 17px);
-    font-weight: bold;
-    color: white;
-}
-
 /*Hover*/
 .card:hover {
-    border-color: #21f3a4;
+    border-color: #22c55e;
     box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
 }
 
 .card:hover .card-button {
     transform: translate(-50%, 50%);
     opacity: 1;
-}
-
-
-.highlight {
-    color: var(--highlight);
-}
-
-
-
-@media screen and (min-width : 370px) {
-    .AcedemicProject::after {
-        width: 20%;
-    }
-
-    .AcedemicProject::before {
-        width: 20%;
-    }
-}
-
-
-@media screen and (min-width : 769) {
-    .AcedemicProject::after {
-        width: 45%;
-    }
-
-    .AcedemicProject::before {
-        width: 45%;
-    }
 }
