--- a/src/styles.css
+++ b/src/styles.css
@@ -12,20 +12,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sacramento&display=swap');
 
 
-:root {
-    --font: "Fira Sans", sans-serif;
-    --highlight: #b4df06;
-    --heading: clamp(20px, 2vw, 40px);
-    --font-weight: 700;
-    --main-heading-font: "Acme", sans-serif;
-
-}
-
 html,
 body {
     scroll-behavior: smooth;
-    background-color: #0f1200;
-    color: white;
+    /* background-color: #0f1200; */
 }
 
 
@@ -42,11 +32,6 @@ body {
     background-color: #0f1200;
 }
 
-
-.responsive-svg {
-    width: clamp(50px, 5vw, 60px);
-    height: clamp(50px, 5vw, 60px);
-  }
 
 
 /* Button */
@@ -71,7 +56,7 @@ body {
     display: block;
     border-radius: 50px;
     /* background: #9700f5; */
-    background: radial-gradient(circle, rgba(255, 0, 250, 1) 0%, rgba(255, 0, 0, 1) 100%);
+    background: rgba(0, 205, 0, 0.352);
     color: black;
     width: 45px;
     height: 45px;
@@ -86,18 +71,18 @@ body {
     font-size: 18px;
     font-weight: 700;
     letter-spacing: 0.05em;
-    color: #ffffff;
+    color: #000000;
 }
 
 .cta svg {
     display: inline;
     position: relative;
     top: 0;
-    margin-left: 10px;
+    margin-left: 5px;
     fill: none;
     stroke-linecap: round;
     stroke-linejoin: round;
-    stroke: #ffffff;
+    stroke: black;
     stroke-width: 2;
     -webkit-transform: translateX(-5px);
     -ms-transform: translateX(-5px);
@@ -109,8 +94,7 @@ body {
 
 .cta:hover:before {
     width: 100%;
-    /* background: #9700f5; */
-    background: radial-gradient(circle, rgba(255, 0, 250, 1) 0%, rgba(255, 0, 0, 1) 100%);
+    background: #22c55e;
 }
 
 .cta:hover svg {
