--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <!-- intro section -->
 
 <section class="bg-zinc-50">
-    <MaxWidthWrapper className="pt-16 pb-20 lg:pt-32 lg:pb-40 lg:grid lg:grid-cols-3">
+    <MaxWidthWrapper id="resume" className="pt-16 pb-20 lg:pt-32 lg:pb-40 lg:grid lg:grid-cols-3">
         <div class="col-span-2">
             <div class="flex flex-col">
                 <p
@@ -54,7 +54,7 @@
 
 <!-- About Section  -->
 
-<MaxWidthWrapper className="pt-20 pb-32 lg:pt-24 lg:pb-48">
+<MaxWidthWrapper id="about" className="pt-20 pb-32 lg:pt-24 lg:pb-48">
     <div class="lg:grid lg:grid-cols-3">
         <div class="col-span-2">
             <h1
@@ -109,9 +109,9 @@
 
 
 
-<!-- Technologies Section -->
+<!-- Skills Section -->
 
-<section class="bg-slate-50">
+<section class="bg-slate-50" >
     <MaxWidthWrapper className="py-32 lg:pt-28 lg:pb-44">
         <p
             class="mb-4 font-heading list_reveal text-2xl font-semibold after:inline-block after:w-1/2 after:h-px after:bg-green-500 after:ml-2">
@@ -133,11 +133,11 @@
 
 <!-- Projects -->
 
-<app-project></app-project>
+<app-project id="projects"></app-project>
 
 
 <!-- Contact Section -->
-<section class="bg-zinc-50">
+<section id="contact" class="bg-zinc-50">
     <MaxWidthWrapper className="py-52">
         <section class="grid place-content-center ">
             <div class="md:w-6/12 text-center mx-auto">
